--- a/Chupaderos Jaaguillo 2/P2L3_honduras.html
+++ b/Chupaderos Jaaguillo 2/P2L3_honduras.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
 <html>
-	<p><b><font size = "7", color = "orange"><center>CHUPADEROS DEL JAGUILLO</font></b><br><font size = "5"color = "white">DONDE SE PONE A PIJA ESTE MAJE</font></br>
+	<p><b><center>CHUPADEROS DEL JAGUILLO
+		DONDE SE PONE A PIJA ESTE MAJE
 	<a href="mailto:iriasam@yahoo.com" title="enviar correo a Edwin Irias">Enviar mail</a>
-	<p><b><font size = "6", color = "red"><center>SEMANA MORAZÁNICA, 2019</font>
-<b><font size = "4", color = "white"><center>Cualquier consulta llameme al 00 (504) 3234-2679</font></b></p>
-<font size = "4", color = "green"><center>E-mail "iriasam@yahoo.com" Alias Pocas Pulgas
+	<p><b><center>SEMANA MORAZÁNICA, 2019
+		<center>Cualquier consulta llameme al 00 (504) 3234-2679
+			<center>E-mail "iriasam@yahoo.com" Alias Pocas Pulgas
 	<head>
 		<meta charset="utf-8"/>
 		<title>¡¡Quien dijo miedo¡¡</title>
